Mise à jour du projet Todo-List : ajout des composants et corrections

--- a/.hintrc
+++ b/.hintrc
@@ -15,6 +15,12 @@
       {
         "list": "off"
       }
+    ],
+    "axe/text-alternatives": [
+      "default",
+      {
+        "image-alt": "off"
+      }
     ]
   }
 }
